objects/JBCXM__SurveyResponse__c.object
<CustomObject>
    <description>Object to store the NPS Survey responses provided by the customers.</description>
    <fields>
        <fullName>JBCXM__Account__c</fullName>
        <description>Account / Customer</description>
        <inlineHelpText>Account / Customer</inlineHelpText>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipName>SurveyResponse</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <reparentableMasterDetail>true</reparentableMasterDetail>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>JBCXM__AssociatedObjectDisplayValue__c</fullName>
        <inlineHelpText>Associate Object Display Value</inlineHelpText>
        <label>Associated Object Display Value</label>
        <length>160</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>JBCXM__AssociatedObjectRecordID__c</fullName>
        <description>To store the Record Id of the salesforce object that is associated with this response.</description>
        <inlineHelpText>Associated Object record ID</inlineHelpText>
        <label>Associated Object Record ID</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>JBCXM__AssociatedObjectRecordValue__c</fullName>
        <description>The value of the Associated object that is usually sent via the API Call</description>
        <inlineHelpText>Associated Object Value</inlineHelpText>
        <label>Associated Object Record Value</label>
        <length>160</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>JBCXM__NPSComment__c</fullName>
        <description>NPS Comment provided by the user.</description>
        <inlineHelpText>NPS Comment provided by the user.</inlineHelpText>
        <label>NPS Comment</label>
        <length>4096</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>JBCXM__NPSScoreText__c</fullName>
        <description>Stores nps score in text format</description>
        <label>NPS Score Text</label>
        <length>4</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>JBCXM__NPSScoreType__c</fullName>
        <description>Stores the type of score &quot;Promoter&quot;,&quot;Detractors&quot;  and  &quot;Passives&quot;</description>
        <label>NPS Score Type</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>JBCXM__NPSScore__c</fullName>
        <description>NPS Score entered by the user.</description>
        <inlineHelpText>NPS Score entered by the user.</inlineHelpText>
        <label>NPS Score</label>
        <precision>4</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>JBCXM__Relationship__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Relationship</description>
        <label>Relationship</label>
        <referenceTo>JBCXM__GSRelationship__c</referenceTo>
        <relationshipLabel>NPS Survey Response</relationshipLabel>
        <relationshipName>NPSSurveyResponse</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>JBCXM__ResponseDate__c</fullName>
        <description>Date on which the response was provided</description>
        <inlineHelpText>Date on which the response was provided</inlineHelpText>
        <label>Response Date</label>
        <required>true</required>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>JBCXM__SurveyCode__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Survey Code</description>
        <inlineHelpText>Survey Code</inlineHelpText>
        <label>Survey Code</label>
        <referenceTo>JBCXM__SurveyMaster__c</referenceTo>
        <relationshipName>SurveyResponse</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>JBCXM__SurveyParticipantId__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Survey Participant</label>
        <referenceTo>JBCXM__SurveyParticipant__c</referenceTo>
        <relationshipName>NPSSurvey_Response</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>JBCXM__TrueNPS__c</fullName>
        <description>True NPS. For Promoter = 100, Passive = 0 and Detractor = -100.</description>
        <formula>IF(JBCXM__NPSScore__c &lt;=6,-100,IF(JBCXM__NPSScore__c &gt;=9,100,0))</formula>
        <label>True NPS</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>JBCXM__UserEmail__c</fullName>
        <description>Email address of the user providing the comment.</description>
        <inlineHelpText>Email address of the user providing the comment.</inlineHelpText>
        <label>User Email</label>
        <required>true</required>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>JBCXM__UserName__c</fullName>
        <description>Name of the user providing the comment.</description>
        <inlineHelpText>Name of the user providing the comment.</inlineHelpText>
        <label>User Name</label>
        <length>80</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>JBCXM__UserRole__c</fullName>
        <defaultValue>&quot;User&quot;</defaultValue>
        <description>Role of the user providing the comment.</description>
        <inlineHelpText>Role of the user providing the comment.</inlineHelpText>
        <label>User Role</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <label>NPSSurvey Response</label>
    <listViews>
        <fullName>JBCXM__All1</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>{0}</displayFormat>
        <label>Survey Response Id</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>NPSSurvey Response</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>